--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,15 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  provider: MyString
   uid: MyString
   name: MyString
-  oauth_token: MyString
-  oauth_expires_at: 2017-06-08 16:37:13
+  image_url: MyString
+  url: MyString
 
 two:
-  provider: MyString
   uid: MyString
   name: MyString
-  oauth_token: MyString
-  oauth_expires_at: 2017-06-08 16:37:13
+  image_url: MyString
+  url: MyString
